syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "HelloStreamingProto";

package grpc;

service StreamingGreeter {

  // SayHelloStreaming 스트리밍 연습.
  rpc SayHelloStreaming(stream HelloRequest) returns (stream HelloReply) {}
}

// 스트리밍 연습 요청
message HelloRequest {
  string name = 1;
}

// 스트리밍 연습 응답
message HelloReply {
  string message = 1;
}